--- a/app/templates/kakao.html
+++ b/app/templates/kakao.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-<a href="https://kauth.kakao.com/oauth/authorize?client_id=76b2956e73b28279536c31c5fe24562a&redirect_uri=http://localhost:8000/api/auth/kakao/&response_type=code">
+<a href="https://kauth.kakao.com/oauth/authorize?client_id=76b2956e73b28279536c31c5fe24562a&redirect_uri=http://13.209.3.115:88/api/auth/kakao/&response_type=code">
     카카오톡으로 로그인</a>
 </body>
 </html>
